<resources>
    <!--    <string name="app_name">Eventos</string>-->

    <string name="text_search">Pesquisa</string>
    <string name="text_version">Versão</string>
    <string name="text_share_app">Compartilhar App</string>
    <string name="text_search_login">Pesquisar Evento</string>
    <string name="text_assessment">Avalie nosso App</string>
    <string name="text_date">Data:</string>
    <string name="text_cifrao">R$</string>
    <string name="text_events">Eventos</string>
    <string name="text_details_events">Detalhes do Evento</string>
    <string name="text_title">title</string>
    <string name="text_description">Descrição</string>
    <string name="text_checking">Faça seu check-in</string>
    <string name="text_name">Nome</string>
    <string name="text_email">E-mail</string>
    <string name="text_bottom_checking">Check-in</string>
    <string name="google_map_address">http://maps.google.com/maps?daddr=</string>

    <string name="fildtext_empty">Campos Nome/E-mail não pode está fazios!</string>

    <string name="checking_successfully">Chek-in realizado com sucesso!</string>
    <string name="checking_error">Erro ao realizar check-in</string>
    <string name="text_ready">Aguarde!</string>
    <string name="style_text_error_list">Erro ao listar evento</string>
    <string name="text_name_email_invalid">Nome/E-mail inválido!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>