<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.soft.eventos.data.model.Events" />

        <variable
            name="viewModel"
            type="Events" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/nameEvents"
                        style="@style/nameEvents"
                        android:text="@string/text_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        style="@style/cardView"
                        app:cardCornerRadius="@dimen/_8sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameEvents">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white_xd">

                            <ImageView
                                android:id="@+id/imgEvents"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@mipmap/img" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        style="@style/linearLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView">

                        <TextView
                            android:id="@+id/dateEvents"
                            style="@style/dateEvents"
                            android:text="@string/text_date" />

                        <TextView
                            android:id="@+id/priceEvents"
                            style="@style/priceEvents"
                            android:text="@string/text_cifrao" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/descriptionEvents"
                        style="@style/descriptionEvents"
                        android:text="@string/text_description"
                        app:layout_constraintBottom_toTopOf="@+id/divider4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                    <View
                        android:id="@+id/divider4"
                        style="@style/divider4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    style="@style/linearLayout2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_checking"
                        android:textColor="@color/blue_xd"
                        android:textSize="@dimen/_14ssp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/labelName"
                        style="@style/labelName"
                        android:hint="@string/text_name"
                        app:hintTextColor="@color/blue_xd"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editName"
                            style="@style/editName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/labelEmail"
                        style="@style/textInput_labelEmail"
                        android:hint="@string/text_email"
                        app:hintTextColor="@color/blue_xd"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleTint="@color/blue_xd">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editEmail"
                            style="@style/editEmail" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnChekin"
                        style="@style/btnChekin"
                        android:text="@string/text_bottom_checking" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>